--- a/deconfig/jdcloud_ipq60xx_libwrt.config
+++ b/deconfig/jdcloud_ipq60xx_libwrt.config
@@ -154,6 +154,8 @@ CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
 
 # Proxy
+#  openclash
+CONFIG_PACKAGE_luci-app-openclash=y
 #  Passwall
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=n
